# project_agent_harness

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  builtin_tools.py  code_review_agent.py  harness.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: claude_code_architecture.md  interview_qa.md
sample_project/: __init__.py  calculator.py  data_processor.py  db_bugs.py  error_handling.py  logic_bugs.py  network_bugs.py  resource_leaks.py  security_issues.py  style_issues.py  user_manager.py
tests/: test_harness.py
