[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "1.0.0"
description = "A mini Claude Code-style Agent Harness with multi-agent code review"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Agent Harness Contributors" }]
keywords = ["agent", "llm", "harness", "code-review", "multi-agent", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/agent-harness"
Repository = "https://github.com/your-username/agent-harness"

[tool.setuptools.packages.find]
include = ["sample_project*"]
exclude = ["output*", "tests*", "docs*", ".github*"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["sample_project", "output", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
